--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,7 @@
         <dependency.bco.authentication.version>${dependency.bco.version}</dependency.bco.authentication.version>
         <dependency.bco.registry.version>${dependency.bco.version}</dependency.bco.registry.version>
         <dependency.org.codehaus.mojo.license-maven-plugin.version>1.10</dependency.org.codehaus.mojo.license-maven-plugin.version>
+        <dependency.com.influxdb.influxdb-client-java.version>[1.0,1.1-alpha)</dependency.com.influxdb.influxdb-client-java.version>
     </properties>
     
     <repositories>
