--- a/openhab/pom.xml
+++ b/openhab/pom.xml
@@ -104,12 +104,14 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.5</version>
+            <version>2.6.2</version>
+<!--            <version>2.8.5</version>-->
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>23.0</version>
+            <version>19.0</version>
+<!--            <version>23.0</version>-->
         </dependency>
 
         <dependency>
@@ -145,7 +147,8 @@
     </dependencies>
 
     <properties>
-        <dependency.eclipse.smarthome.version>0.10.0</dependency.eclipse.smarthome.version>
+<!--        <dependency.eclipse.smarthome.version>0.10.0</dependency.eclipse.smarthome.version>-->
+        <dependency.eclipse.smarthome.version>0.9.0</dependency.eclipse.smarthome.version>
     </properties>
 
 
