--- a/test/pom.xml
+++ b/test/pom.xml
@@ -77,5 +77,11 @@
             <artifactId>bco.dal.visual</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
