--- a/remote/pom.xml
+++ b/remote/pom.xml
@@ -84,5 +84,10 @@
             <artifactId>bco.registry.unit.remote</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.openbase</groupId>
+            <artifactId>bco.registry.message.remote</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
