--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,7 @@
         <skipTests>true</skipTests>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <dependency.org.junit.jupiter.version>[5.5,5.6)</dependency.org.junit.jupiter.version>
         <dependency.rta.lib.version>[1.5,1.6-alpha)</dependency.rta.lib.version>
         <dependency.bco.version>2.0-SNAPSHOT</dependency.bco.version>
         <dependency.jul.version>2.0-SNAPSHOT</dependency.jul.version>
@@ -222,9 +223,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${dependency.org.junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
