Implement bco-registry-validate and generally improve system validation process by skipping further remote tests when ping fails and implement --wait-for-data and --exit-on-error flags for both system validators.

--- a/util/pom.xml
+++ b/util/pom.xml
@@ -89,6 +89,13 @@
                             </platforms>
                         </program>
                         <program>
+                            <mainClass>org.openbase.bco.app.util.launch.BCORegistryValidator</mainClass>
+                            <id>bco-registry-validate</id>
+                            <platforms>
+                                <platform>unix</platform>
+                            </platforms>
+                        </program>
+                        <program>
                             <mainClass>org.openbase.bco.app.util.launch.BCOTrainDataGeneratorLauncher</mainClass>
                             <id>bco-generate-trainingdata</id>
                             <platforms>
