Implement dynamic devicemanager handling for the bco main app. Therefore, device managers can now be started as part of the default bco app to improve bco memory usage on low power machines like the pi.

--- a/util/pom.xml
+++ b/util/pom.xml
@@ -146,6 +146,14 @@
             <artifactId>bco.registry.util</artifactId>
             <version>${dependency.bco.registry.version}</version>
         </dependency>
+
+        <!-- only for building bins -->
+        <dependency>
+            <groupId>org.openbase</groupId>
+            <artifactId>bco.device.openhab</artifactId>
+            <version>${dependency.bco.version}</version>
+        </dependency>
+
         <!-- test -->
         <dependency>
             <groupId>org.openbase</groupId>
