allow zulu java als dep

--- a/package/dep/src/main/deb/control/control
+++ b/package/dep/src/main/deb/control/control
@@ -5,4 +5,4 @@ Priority: optional
 Architecture: all
 Description: [[description]]
 Maintainer: Marian Pohling <divine@openbase.org>
-Depends: default-jre | java8-runtime
+Depends: default-jre | java8-runtime | zulu-8
