switch bco docker from local build to installing bco via debian repo package.

--- a/docker/bco/Dockerfile
+++ b/docker/bco/Dockerfile
@@ -1,38 +1,42 @@
-# Use an official Python runtime as a parent image
-FROM java:8-jre
+# Baseline image
+FROM azul/zulu-openjdk-debian:11
 
-# Install git and mvn
+# Setup Openbase Debian Repository
+RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys AAF438A589C2F541
+RUN echo "deb https://dl.bintray.com/openbase/deb buster main" | tee -a /etc/apt/sources.list
+RUN echo "deb https://dl.bintray.com/openbase/deb buster testing" | tee -a /etc/apt/sources.list
+
+
+# Install bco
 RUN apt-get update && \
     DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
-    git \
-    maven \
-    pv
+    bco
 
 # Setup Environment 
-ENV prefix /usr/local/bco
-RUN echo 'export PATH="$PATH:$prefix/bin"' >> ~/.bashrc
-RUN . ~/.bashrc
-RUN mkdir -p $prefix
+#ENV prefix /usr/local/bco
+#RUN echo 'export PATH="$PATH:$prefix/bin"' >> ~/.bashrc
+#RUN . ~/.bashrc
+#RUN mkdir -p $prefix
 
 # Set the working directory to the prefix
-WORKDIR $prefix
+#WORKDIR $prefix
 
 # Create RSB configuration
-RUN mkdir -p ~/.config
-ADD rsb.conf $prefix/
-RUN mv rsb.conf ~/.config/
+#RUN mkdir -p ~/.config
+#ADD rsb.conf $prefix/
+#RUN mv rsb.conf ~/.config/
 
 # Create MVN configuration
-RUN mkdir -p ~/.m2
-ADD mvn-settings.xml $prefix/
-RUN mv mvn-settings.xml ~/.m2/settings.xml
+#RUN mkdir -p ~/.m2
+#ADD mvn-settings.xml $prefix/
+#RUN mv mvn-settings.xml ~/.m2/settings.xml
 
-EXPOSE 4803
+#EXPOSE 4803
 
-VOLUME $prefix/var
-VOLUME $prefix/etc
-VOLUME $prefix/share
+#VOLUME $prefix/var
+#VOLUME $prefix/etc
+#VOLUME $prefix/share
 
-RUN git clone https://github.com/openbase/bco.git bco
-RUN cd bco; ./install.sh --batch-mode; cd ..
-CMD exec bin/bco
+#RUN git clone https://github.com/openbase/bco.git bco
+#RUN cd bco; ./install.sh --batch-mode; cd ..
+CMD exec bco
