disable dal tests

--- a/test/pom.xml
+++ b/test/pom.xml
@@ -53,7 +53,7 @@
     </build>
     
     <properties>
-        <skipTests>false</skipTests>
+        <skipTests>true</skipTests>
     </properties>
     
     <dependencies>
