Revert "disable dal tests"
This reverts commit 848c28f5a581ab8f1e91336c78d4f5db682a9ba5.

--- a/test/pom.xml
+++ b/test/pom.xml
@@ -53,7 +53,7 @@
     </build>
     
     <properties>
-        <skipTests>true</skipTests>
+        <skipTests>false</skipTests>
     </properties>
     
     <dependencies>
