--- a/util/pom.xml
+++ b/util/pom.xml
@@ -193,5 +193,11 @@
             <artifactId>commons-collections</artifactId>
             <version>3.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${dependency.org.junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
