--- a/class-registry/lib/pom.xml
+++ b/class-registry/lib/pom.xml
@@ -70,7 +70,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.6.2</version>
+            <version>${dependency.org.junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -78,7 +78,7 @@
         <dependency>
             <groupId>org.junit.vintage</groupId>
             <artifactId>junit-vintage-engine</artifactId>
-            <version>5.6.2</version>
+            <version>${dependency.org.junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
