--- a/message-registry/test/pom.xml
+++ b/message-registry/test/pom.xml
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.6.2</version>
+            <version>${dependency.org.junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -65,7 +65,7 @@
         <dependency>
             <groupId>org.junit.vintage</groupId>
             <artifactId>junit-vintage-engine</artifactId>
-            <version>5.6.2</version>
+            <version>${dependency.org.junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
