write unit test for unit data filtered observable

--- a/test/pom.xml
+++ b/test/pom.xml
@@ -64,6 +64,11 @@
         </dependency>
         <dependency>
             <groupId>org.openbase</groupId>
+            <artifactId>bco.registry.util</artifactId>
+            <version>${dependency.bco.registry.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openbase</groupId>
             <artifactId>bco.dal.remote</artifactId>
             <version>${project.version}</version>
         </dependency>
